--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "platform/libpicofe"]
 	path = platform/libpicofe
-	url = https://github.com/irixxxx/libpicofe.git
+	url = https://github.com/raytf/libpicofe.git
 [submodule "cpu/cyclone"]
 	path = cpu/cyclone
 	url = https://github.com/irixxxx/cyclone68000.git
